a little more work

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -19,7 +19,10 @@
     "library(MASS)\n",
     "library(caret)\n",
     "library(glmnet)\n",
-    "library(Rcpp)"
+    "library(Rcpp)\n",
+    "library(randomForest)\n",
+    "library(doParallel)\n",
+    "library(xgboost)"
    ]
   },
   {
@@ -100,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "options(repr.plot.width=20, repr.plot.height=20)\n",
+    "options(repr.plot.width = 20, repr.plot.height = 20)\n",
     "nums <- unlist(lapply(train_data, is.numeric), use.names = FALSE)\n",
     "\n",
     "train_data %>%\n",
@@ -108,7 +111,7 @@
     "gather(cols, value) %>%\n",
     "ggplot(aes(value)) + geom_histogram() + facet_wrap(~cols, scales = 'free')\n",
     "\n",
-    "options(repr.plot.width=12, repr.plot.height=12)"
+    "options(repr.plot.width = 12, repr.plot.height = 12)"
    ]
   },
   {
@@ -260,7 +263,7 @@
    "source": [
     "correlations[, 38] %>% sort(decreasing = TRUE) %>% names() -> cols\n",
     "\n",
-    "train_data_cleaned %>%\n",
+    "train_data %>%\n",
     "dplyr::select(cols[0:10]) %>%\n",
     "ggpairs(aes(alpha = 0.75)) + theme_bw()"
    ]
@@ -302,13 +305,13 @@
    },
    "outputs": [],
    "source": [
-    "qqnorm(train_data_cleaned$GrLivArea)\n",
-    "qqline(train_data_cleaned$GrLivArea)\n",
+    "qqnorm(test_data_cleaned$GrLivArea)\n",
+    "qqline(test_data_cleaned$GrLivArea)\n",
     "\n",
     "train_data_cleaned$GrLivAreaLog <- log(train_data_cleaned$GrLivArea)\n",
     "test_data_cleaned$GrLivAreaLog <- log(test_data_cleaned$GrLivArea)\n",
-    "qqnorm(train_data_cleaned$GrLivAreaLog)\n",
-    "qqline(train_data_cleaned$GrLivAreaLog)"
+    "qqnorm(test_data_cleaned$GrLivAreaLog)\n",
+    "qqline(test_data_cleaned$GrLivAreaLog)"
    ]
   },
   {
@@ -321,8 +324,8 @@
    },
    "outputs": [],
    "source": [
-    "qqnorm(train_data_cleaned$YearBuilt)\n",
-    "qqline(train_data_cleaned$YearBuilt)\n",
+    "qqnorm(test_data_cleaned$YearBuilt)\n",
+    "qqline(test_data_cleaned$YearBuilt)\n",
     "\n",
     "train_data_cleaned$YearBuiltLogInv <- log(1 / train_data_cleaned$YearBuilt)\n",
     "test_data_cleaned$YearBuiltLogInv <- log(1 / test_data_cleaned$YearBuilt)\n",
@@ -479,8 +482,6 @@
    },
    "outputs": [],
    "source": [
-    "print(cols)\n",
-    "\n",
     "qplot(\n",
     "    train_data_cleaned$YearRemodAdd,\n",
     "    train_data_cleaned$SalePrice,\n",
@@ -629,70 +630,28 @@
    },
    "outputs": [],
    "source": [
-    "(predict(linear_model, train_data_cleaned_val) -\n",
-    "    train_data_cleaned_val$SalePriceLog) %>%\n",
-    "mean(na.rm = TRUE) %>% sqrt() -> lm_rmse\n",
-    "\n",
-    "print(lm_rmse)"
+    "predictions <- linear_model %>% predict(train_data_cleaned_val)\n",
+    "data.frame(\n",
+    "    RMSE = RMSE(\n",
+    "        predictions,\n",
+    "        train_data_cleaned_val$SalePriceLog,\n",
+    "        na.rm = TRUE\n",
+    "        ),\n",
+    "    R2 = R2(\n",
+    "        predictions,\n",
+    "        train_data_cleaned_val$SalePriceLog,\n",
+    "        na.rm = TRUE\n",
+    "        )\n",
+    ") %>% print()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the correlation plots we can see there's quite some multicolinearity happening here. Still, the model doesn't seem all that bad with R^2 = 0.82. Let's add the categorical variables to the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "train_data_cleaned_train %>%\n",
-    "select_if(purrr::negate(is.numeric)) %>%\n",
-    "names() -> categorical_cols\n",
+    "From the correlation plots we can see there's quite some multicolinearity happening here. Still, the model doesn't seem all that bad with R^2 = 0.82.\n",
     "\n",
-    "lm_cols <- c(transformed_cols[-1], categorical_cols)\n",
-    "\n",
-    "formula <- paste(\"SalePriceLog ~ \", paste(lm_cols, collapse = \" + \"), sep = \"\")\n",
-    "\n",
-    "linear_model <- lm(formula, data = train_data_cleaned_train)\n",
-    "\n",
-    "summary(linear_model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "train_data_complete <- tidyr::drop_na(train_data_cleaned_train)\n",
-    "val_data_complete <- tidyr::drop_na(train_data_cleaned_val)\n",
-    "\n",
-    "(predict(linear_model, train_data_complete) -\n",
-    "    train_data_complete$SalePriceLog) %>%\n",
-    "mean(na.rm = TRUE) %>% sqrt() -> lm_rmse\n",
-    "\n",
-    "print(lm_rmse)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here train data is used for simplicity since there are many categorical variables whose levels are not the same in both train and validation data.\n",
-    "\n",
-    "R² is now 0.92. However, we should take this with a grain of salt since there are far too many categorical variables and levels and too much multicolinearity. It's a good idea to either use a form of variable selection such as lasso or another type of model that can implicitly handle the excess of variables.\n",
+    "We should take this with a grain of salt since there are far too many categorical variables and levels and too much multicolinearity. It's a good idea to either use a form of variable selection such as lasso or another type of model that can implicitly handle the excess of variables.\n",
     "\n",
     "We'll start with lasso and ridge penalized regression."
    ]
@@ -708,11 +667,15 @@
    "outputs": [],
    "source": [
     "near_zero_var <- caret::nearZeroVar(train_data_cleaned_train)\n",
+    "train_data_variance <- train_data_cleaned_train[, -near_zero_var]\n",
     "\n",
     "lambdas <- 10 ^ seq(-5, 5, length = 100)\n",
+    "\n",
     "ridge <- caret::train(\n",
     "    SalePriceLog ~ .,\n",
-    "    data = train_data_cleaned_train[, -near_zero_var],\n",
+    "    data = train_data_variance[, -which(\n",
+    "        names(train_data_variance) == \"SalePrice\"\n",
+    "        )],\n",
     "    method = \"glmnet\",\n",
     "    trControl = trainControl(\"cv\", number = 5),\n",
     "    tuneGrid = expand.grid(alpha = 0, lambda = lambdas),\n",
@@ -721,7 +684,9 @@
     "\n",
     "lasso <- caret::train(\n",
     "    SalePriceLog ~ .,\n",
-    "    data = train_data_cleaned_train[, -near_zero_var],\n",
+    "    data = train_data_variance[, -which(\n",
+    "        names(train_data_variance) == \"SalePrice\"\n",
+    "        )],\n",
     "    method = \"glmnet\",\n",
     "    trControl = trainControl(\"cv\", number = 5),\n",
     "    tuneGrid = expand.grid(alpha = 1, lambda = lambdas),\n",
@@ -730,7 +695,9 @@
     "\n",
     "elastic <- caret::train(\n",
     "    SalePriceLog ~ .,\n",
-    "    data = train_data_cleaned_train[, -near_zero_var],\n",
+    "    data = train_data_variance[, -which(\n",
+    "        names(train_data_variance) == \"SalePrice\"\n",
+    "        )],\n",
     "    method = \"glmnet\",\n",
     "    trControl = trainControl(\"cv\", number = 5),\n",
     "    tuneLength = 10,\n",
@@ -825,7 +792,7 @@
     "select_if(is.numeric) %>%\n",
     "na.omit() %>%\n",
     "lapply(scale) %>%\n",
-    "lapply(function(x) abs(x) > 4) %>%\n",
+    "lapply(function(x) abs(x) > 3) %>%\n",
     "sapply(sum) %>%\n",
     "print()"
    ]
@@ -870,6 +837,11 @@
     "    train_data_norm, train_data_cleaned[, categorical_cols]\n",
     ")\n",
     "\n",
+    "train_data_norm <- train_data_norm[, -which(\n",
+    "    names(train_data_norm) %in% c(\"Id\", \"SalePrice\")\n",
+    ")]\n",
+    "train_data_norm$SalePriceLog <- train_data_cleaned$SalePriceLog\n",
+    "\n",
     "train_data_norm_train <- train_data_norm[split_index, ]\n",
     "train_data_norm_val <- train_data_norm[-split_index, ]"
    ]
@@ -906,8 +878,20 @@
     "mean(na.rm = TRUE) %>%\n",
     "sqrt() -> lm_rmse\n",
     "\n",
-    "print(\"RMSE:\")\n",
-    "print(lm_rmse)"
+    "predictions <- linear_model %>% predict(train_data_norm_val)\n",
+    "\n",
+    "data.frame(\n",
+    "    RMSE = RMSE(\n",
+    "        predictions,\n",
+    "        train_data_norm_val$SalePriceLog,\n",
+    "        na.rm = TRUE\n",
+    "        ),\n",
+    "    R2 = R2(\n",
+    "        predictions,\n",
+    "        train_data_norm_val$SalePriceLog,\n",
+    "        na.rm = TRUE\n",
+    "        )\n",
+    ") %>% print()"
    ]
   },
   {
@@ -921,11 +905,12 @@
    "outputs": [],
    "source": [
     "near_zero_var <- caret::nearZeroVar(train_data_norm_train)\n",
+    "train_data_variance <- train_data_norm_train[, -near_zero_var]\n",
     "\n",
     "lambdas <- 10 ^ seq(-5, 5, length = 100)\n",
     "ridge <- caret::train(\n",
     "    SalePriceLog ~ .,\n",
-    "    data = train_data_norm_train[, -near_zero_var],\n",
+    "    data = train_data_variance,\n",
     "    method = \"glmnet\",\n",
     "    trControl = trainControl(\"cv\", number = 5),\n",
     "    tuneGrid = expand.grid(alpha = 0, lambda = lambdas),\n",
@@ -934,7 +919,7 @@
     "\n",
     "lasso <- caret::train(\n",
     "    SalePriceLog ~ .,\n",
-    "    data = train_data_norm_train[, -near_zero_var],\n",
+    "    data = train_data_variance,\n",
     "    method = \"glmnet\",\n",
     "    trControl = trainControl(\"cv\", number = 5),\n",
     "    tuneGrid = expand.grid(alpha = 1, lambda = lambdas),\n",
@@ -943,7 +928,7 @@
     "\n",
     "elastic <- caret::train(\n",
     "    SalePriceLog ~ .,\n",
-    "    data = train_data_norm_train[, -near_zero_var],\n",
+    "    data = train_data_variance,\n",
     "    method = \"glmnet\",\n",
     "    trControl = trainControl(\"cv\", number = 5),\n",
     "    tuneLength = 10,\n",
@@ -1009,7 +994,267 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results clearly have improved and the LASSO regression model was the best. I think we should now switch to another more powerful model. Let's juice up and the popular Random Forest and XGBoost models."
+    "There was no clear improvement and RMSE for the penalized models even went down, so let's switch back to the un-normalized data. I think we should now switch to another more powerful model. Let's juice up and the popular Random Forest and XGBoost models.\n",
+    "\n",
+    "We'll use randomForest's default parameters and doParallel to parallelize the computation. Please adjust the number of threads so your CPU doesn't explode."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "near_zero_var <- caret::nearZeroVar(train_data_cleaned_train)\n",
+    "train_data_variance <- train_data_cleaned_train[, -near_zero_var]\n",
+    "\n",
+    "lambdas <- 10 ^ seq(-5, 5, length = 100)\n",
+    "\n",
+    "ridge <- caret::train(\n",
+    "    SalePriceLog ~ .,\n",
+    "    data = train_data_variance[, -which(\n",
+    "        names(train_data_variance) == \"SalePrice\"\n",
+    "        )],\n",
+    "    method = \"glmnet\",\n",
+    "    trControl = trainControl(\"cv\", number = 5),\n",
+    "    tuneGrid = expand.grid(alpha = 0, lambda = lambdas),\n",
+    "    na.action = na.omit\n",
+    ")\n",
+    "\n",
+    "lasso <- caret::train(\n",
+    "    SalePriceLog ~ .,\n",
+    "    data = train_data_variance[, -which(\n",
+    "        names(train_data_variance) == \"SalePrice\"\n",
+    "        )],\n",
+    "    method = \"glmnet\",\n",
+    "    trControl = trainControl(\"cv\", number = 5),\n",
+    "    tuneGrid = expand.grid(alpha = 1, lambda = lambdas),\n",
+    "    na.action = na.omit\n",
+    ")\n",
+    "\n",
+    "elastic <- caret::train(\n",
+    "    SalePriceLog ~ .,\n",
+    "    data = train_data_variance[, -which(\n",
+    "        names(train_data_variance) == \"SalePrice\"\n",
+    "        )],\n",
+    "    method = \"glmnet\",\n",
+    "    trControl = trainControl(\"cv\", number = 5),\n",
+    "    tuneLength = 10,\n",
+    "    na.action = na.omit\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cl <- makePSOCKcluster(16)\n",
+    "registerDoParallel(cl)\n",
+    "\n",
+    "rf_model <- caret::train(\n",
+    "    SalePriceLog ~ .,\n",
+    "    data = train_data_cleaned_train[, -which(\n",
+    "        names(train_data_cleaned_train) == \"SalePrice\"\n",
+    "        )],\n",
+    "    method = \"rf\",\n",
+    "    na.action = na.omit\n",
+    ")\n",
+    "\n",
+    "stopCluster(cl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "predictions <- predict(rf_model, train_data_cleaned_val)\n",
+    "\n",
+    "data.frame(\n",
+    "    RMSE = RMSE(\n",
+    "        predictions,\n",
+    "        tidyr::drop_na(train_data_cleaned_val)$SalePriceLog\n",
+    "        ),\n",
+    "    R2 = R2(\n",
+    "        predictions,\n",
+    "        tidyr::drop_na(train_data_cleaned_val)$SalePriceLog\n",
+    "        )\n",
+    ") %>% print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A little hack is required to finish background parallel tasks:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#from https://stackoverflow.com/questions/64519640/error-in-summary-connectionconnection-invalid-connection\n",
+    "unregister_dopar <- function() {\n",
+    "  env <- foreach:::.foreachGlobals\n",
+    "  rm(list=ls(name=env), pos=env)\n",
+    "}\n",
+    "\n",
+    "unregister_dopar()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not bad at all! There might be some overfitting, but I think it's a good starting point. It's time to go XGBoost."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_control <- trainControl(method = \"cv\", number = 3)\n",
+    "\n",
+    "xgb_grid <- expand.grid(nrounds = 500,\n",
+    "                        max_depth = seq(2, 9),\n",
+    "                        eta = c(0.1, 0.3, 1),\n",
+    "                        gamma = c(0.0, 0.01, 0.1, 1),\n",
+    "                        min_child_weight = c(0.5, 1, 2, 4),\n",
+    "                        colsample_bytree = 1,\n",
+    "                        subsample = 0.5\n",
+    ")\n",
+    "\n",
+    "xgb_tune <- train(SalePriceLog ~.,\n",
+    "                 data = train_data_cleaned_train[, -which(\n",
+    "                     names(train_data_cleaned_train) == \"SalePrice\"\n",
+    "                     )],\n",
+    "                 method = \"xgbTree\",\n",
+    "                 metric = \"RMSE\",\n",
+    "                 trControl = train_control,\n",
+    "                 tuneGrid = xgb_grid,\n",
+    "                 na.action = na.pass\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "predictions <- predict(xgb_tune, train_data_cleaned_val)\n",
+    "\n",
+    "data.frame(\n",
+    "    RMSE = RMSE(\n",
+    "        predictions,\n",
+    "        tidyr::drop_na(train_data_cleaned_val)$SalePriceLog\n",
+    "        ),\n",
+    "    R2 = R2(\n",
+    "        predictions,\n",
+    "        tidyr::drop_na(train_data_cleaned_val)$SalePriceLog\n",
+    "        )\n",
+    ") %>% print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quite surprisingly, ridge regression is still the best model! We'll then use it to produce our test predictions. We can also contruct an ensemble with the models we've trained so far. Let's do the same scaling and outlier removal as we did for the training data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(dim(test_data_cleaned))\n",
+    "\n",
+    "test_data_cleaned %>%\n",
+    "select_if(is.numeric) %>%\n",
+    "lapply(scale) %>%\n",
+    "sapply(clip) %>%\n",
+    "data.frame() ->\n",
+    "test_data_scaled\n",
+    "\n",
+    "test_data_scaled %>%\n",
+    "caret::preProcess(method = \"range\") ->\n",
+    "scaler\n",
+    "\n",
+    "test_data_norm <- scaler %>% predict(test_data_scaled)\n",
+    "\n",
+    "test_data_cleaned %>%\n",
+    "select_if(purrr::negate(is.numeric)) %>%\n",
+    "names() -> categorical_cols\n",
+    "\n",
+    "test_data_norm <- cbind(\n",
+    "    test_data_norm, test_data_cleaned[, categorical_cols]\n",
+    ")\n",
+    "\n",
+    "test_data_norm <- test_data_norm[, -which(\n",
+    "    names(test_data_norm) %in% c(\"Id\", \"SalePrice\")\n",
+    ")]\n",
+    "test_data_norm$SalePriceLog <- test_data_cleaned$SalePriceLog\n",
+    "\n",
+    "print(dim(test_data_cleaned))\n",
+    "print(dim(test_data_norm))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "predict(xgb_tune, test_data_cleaned) %>% exp() -> test_predictions\n",
+    "length(test_predictions)\n",
+    "\n",
+    "submission <- data.frame(\n",
+    "    Id = test_data$Id,\n",
+    "    SalePrice = test_predictions\n",
+    ")\n",
+    "\n",
+    "write.csv(submission, \"submission.csv\")"
    ]
   }
  ],
