finish ordinal variable encoding

--- a/eda_python.ipynb
+++ b/eda_python.ipynb
@@ -320,8 +320,48 @@
     "    {\n",
     "        \"col\": \"KitchenQual\",\n",
     "        \"mapping\": [\"Ex\", \"Gd\", \"TA\", \"Fa\", \"Po\", \"None\"],\n",
-    "    }, # TODO continue\n",
-    "]"
+    "    },\n",
+    "    {\n",
+    "        \"col\": \"BsmtFinType1\",\n",
+    "        \"mapping\": [\"GLQ\", \"ALQ\", \"BLQ\", \"Rec\", \"LwQ\", \"Unf\", \"None\"],\n",
+    "    },\n",
+    "    {\n",
+    "        \"col\": \"BsmtFinType2\",\n",
+    "        \"mapping\": [\"GLQ\", \"ALQ\", \"BLQ\", \"Rec\", \"LwQ\", \"Unf\", \"None\"],\n",
+    "    },\n",
+    "    {\n",
+    "        \"col\": \"Functional\",\n",
+    "        \"mapping\": [\"Typ\", \"Min1\", \"Min2\", \"Mod\", \"Maj1\", \"Maj2\", \"Sev\", \"Sal\"],\n",
+    "    },\n",
+    "    {\n",
+    "        \"col\": \"Fence\",\n",
+    "        \"mapping\": [\"GdPrv\", \"MnPrv\", \"GdWo\", \"MnWw\", \"None\"],\n",
+    "    },\n",
+    "    {\n",
+    "        \"col\": \"BsmtExposure\",\n",
+    "        \"mapping\": [\"Gd\", \"Av\", \"Mn\", \"No\", \"None\"],\n",
+    "    },\n",
+    "    {\n",
+    "        \"col\": \"GarageFinish\",\n",
+    "        \"mapping\": [\"Fin\", \"RFn\", \"Unf\", \"None\"],\n",
+    "    },\n",
+    "    {\n",
+    "        \"col\": \"LandSlope\",\n",
+    "        \"mapping\": [\"Gtl\", \"Mod\", \"Sev\"],\n",
+    "    },\n",
+    "    {\n",
+    "        \"col\": \"LotShape\",\n",
+    "        \"mapping\": [\"Reg\", \"IR1\", \"IR2\", \"IR3\"],\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "for mapping_dict in col_mapping:\n",
+    "    mapping_dict[\"mapping\"] = {x: i for i, x in enumerate(mapping_dict[\"mapping\"])}\n",
+    "\n",
+    "ordinal_encoder = OrdinalEncoder(mapping=col_mapping)\n",
+    "\n",
+    "ordinal_encoder.fit(all_data)\n",
+    "all_data_encoded = ordinal_encoder.transform(all_data)"
    ]
   }
  ],
