--- a/eda_python.ipynb
+++ b/eda_python.ipynb
@@ -363,6 +363,67 @@
     "ordinal_encoder.fit(all_data)\n",
     "all_data_encoded = ordinal_encoder.transform(all_data)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now take a look at some continuous variables and whether they are normally distributed or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "ax = sns.histplot(y_train, kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(y_train, plot=plt)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train_log = np.log(y_train)\n",
+    "\n",
+    "ax = sns.histplot(y_train_log, kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(y_train_log, plot=plt)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.histplot(all_data[\"OverallQual\"], kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(all_data[\"OverallQual\"], plot=plt)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.histplot(np.log(all_data[\"GrLivArea\"]), kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(np.log(all_data[\"GrLivArea\"]), plot=plt)\n",
+    "plt.show()\n",
+    "# TODO continue"
+   ]
   }
  ],
  "metadata": {
