finish basic data cleaning and preprocessing

--- a/eda_python.ipynb
+++ b/eda_python.ipynb
@@ -369,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now take a look at some continuous variables and whether they are normally distributed or not"
+    "Let's now take a look at some continuous variables and whether they are normally distributed or not. We'll only transform continuous variables that are skewed and are not too much zero-inflated."
    ]
   },
   {
@@ -383,15 +383,8 @@
     "ax = sns.histplot(y_train, kde=True)\n",
     "plt.show()\n",
     "ax = stats.probplot(y_train, plot=plt)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.show()\n",
+    "\n",
     "y_train_log = np.log(y_train)\n",
     "\n",
     "ax = sns.histplot(y_train_log, kde=True)\n",
@@ -406,9 +399,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sns.histplot(all_data[\"OverallQual\"], kde=True)\n",
+    "ax = sns.histplot(all_data[\"GrLivArea\"], kde=True)\n",
     "plt.show()\n",
-    "ax = stats.probplot(all_data[\"OverallQual\"], plot=plt)\n",
+    "ax = stats.probplot(all_data[\"GrLivArea\"], plot=plt)\n",
+    "plt.show()\n",
+    "\n",
+    "# apply log transform\n",
+    "\n",
+    "all_data[\"GrLivArea\"] = np.log(all_data[\"GrLivArea\"])\n",
+    "ax = sns.histplot(all_data[\"GrLivArea\"], kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(all_data[\"GrLivArea\"], plot=plt)\n",
     "plt.show()"
    ]
   },
@@ -418,12 +419,177 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sns.histplot(np.log(all_data[\"GrLivArea\"]), kde=True)\n",
+    "ax = sns.histplot(all_data[\"TotalBsmtSF\"], kde=True)\n",
     "plt.show()\n",
-    "ax = stats.probplot(np.log(all_data[\"GrLivArea\"]), plot=plt)\n",
-    "plt.show()\n",
-    "# TODO continue"
+    "ax = stats.probplot(all_data[\"TotalBsmtSF\"], plot=plt)\n",
+    "plt.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This one is not too much skewed and is zero-inflated. So we won't transform it right now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.histplot(all_data[\"1stFlrSF\"], kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(all_data[\"1stFlrSF\"], plot=plt)\n",
+    "plt.show()\n",
+    "\n",
+    "all_data[\"1stFlrSF\"] = np.log(all_data[\"1stFlrSF\"])\n",
+    "\n",
+    "ax = sns.histplot(all_data[\"1stFlrSF\"], kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(all_data[\"1stFlrSF\"], plot=plt)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.histplot(all_data[\"GarageYrBlt\"], kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(all_data[\"GarageYrBlt\"], plot=plt)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(all_data[\"GarageYrBlt\"].max())\n",
+    "\n",
+    "all_data.loc[all_data[\"GarageYrBlt\"].argmax(), \"GarageYrBlt\"] = all_data[\"GarageYrBlt\"].mean()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Oops! There if a garage built in the future! This value was replaced with the variable average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.histplot(all_data[\"MasVnrArea\"], kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(all_data[\"MasVnrArea\"], plot=plt)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extreme zero-inflation. So let's keep it this way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.histplot(all_data[\"BsmtFinSF1\"], kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(all_data[\"BsmtFinSF1\"], plot=plt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.histplot(all_data[\"LotFrontage\"], kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(all_data[\"LotFrontage\"], plot=plt)\n",
+    "plt.show()\n",
+    "\n",
+    "all_data[\"LotFrontage\"] = np.log(all_data[\"LotFrontage\"])\n",
+    "\n",
+    "ax = sns.histplot(all_data[\"LotFrontage\"], kde=True)\n",
+    "plt.show()\n",
+    "ax = stats.probplot(all_data[\"LotFrontage\"], plot=plt)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "x_numeric_columns = numeric_columns.drop(\"SalePrice\")\n",
+    "skewness = all_data[x_numeric_columns].apply(stats.skew)\n",
+    "\n",
+    "# get most skewed variables\n",
+    "skewness = pd.DataFrame({\"Skew\": skewness.sort_values(key=lambda x: abs(x), ascending=False)})\n",
+    "skewness.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.histplot(all_data[\"LotArea\"], kde=True)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "all_data[\"LotArea\"] = np.log(all_data[\"LotArea\"])\n",
+    "\n",
+    "ax = sns.histplot(all_data[\"LotArea\"], kde=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Besides this variable, all others are skewed due to lots of zeros. This is pretty common in this dataset, so let's create binary variables describing whether those variables are zero or not:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "has_zero = all_data[x_numeric_columns].eq(0).any()\n",
+    "has_zero = has_zero[has_zero == True].index.values\n",
+    "\n",
+    "for var in has_zero:\n",
+    "    all_data[f\"Has{var}\"] = (all_data[var] != 0).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
